--- a/src/Psicomy.Services.Billing.csproj
+++ b/src/Psicomy.Services.Billing.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -26,6 +26,7 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageReference Include="Serilog.Sinks.OpenTelemetry" Version="4.2.0" />
     <PackageReference Include="Stripe.net" Version="47.4.0" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.407" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
