--- a/src/Psicomy.Services.Billing.csproj
+++ b/src/Psicomy.Services.Billing.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -39,7 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Psicomy.Shared.Kernel" Version="1.7.5" />
+    <PackageReference Include="Psicomy.Shared.Kernel" Version="1.7.6" />
   </ItemGroup>
 
 </Project>
